--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "autoprefixer": "^10.2.6",
     "next": "11.0.0",
+    "postcss": "^8.3.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-countup": "^4.3.3",
+    "react-dom": "17.0.2",
+    "react-map-gl": "^6.1.16",
+    "react-text-loop": "^2.3.0",
+    "tailwindcss": "^2.2.2"
   },
   "devDependencies": {
     "eslint": "7.29.0",
